# number-go-up

./: .gitignore  README.md  index.html  package-lock.json  package.json  smoke-test.mjs  tsconfig.json  vite.config.ts
.github/workflows/: deploy-pages.yml
src/: game.ts  main.ts  state.ts  styles.css  ui.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/data/: cards.ts  upgrades.ts
src/systems/: achievements.ts  audio.ts  economy.ts  funnyNumbers.ts  notation.ts  prestige.ts  save.ts  steam.ts
