[package]
name = "number-goes-up"
version = "0.1.0"
description = "There is a number. It goes up."
edition = "2021"
rust-version = "1.77"

[lib]
name = "number_goes_up_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Real Steamworks integration goes here when wiring achievements / cloud / DLC.
# It needs the Steam SDK redistributables and a configured app id, so it's left
# commented until those exist:
# steamworks = "0.11"
